# j3DevHelper

./: README.md
src/: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.txt  about.txt  build.rs  build_release.py  j3devhelper-linux.toml  j3devhelper.toml
src/docs/: domain.md  platform-equivalence.md  ui-spec.md
src/src/: app.rs  domain.rs  error.rs  lib.rs  main.rs
src/src/domain/: arguments.rs  core.rs  localization.rs  navigation.rs  state.rs  tests.rs  ui.rs
src/src/infra/: about.rs  desktop_entry.rs  gtk4.rs  mod.rs  settings.rs  win32.rs
src/src/infra/settings/: path_policy.rs  persistence.rs  restore_policy.rs  stored_document.rs
src/src/infra/win32/: command_execution.rs  dialogs.rs  persistence.rs
